--- a/package.json
+++ b/package.json
@@ -10,14 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-table": "^8.21.3",
+    "@types/react-redux": "^7.1.34",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dropdown-menu": "^0.1.1",
+    "lucide-react": "^0.511.0",
     "pure-react-carousel": "^1.32.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.1",
     "react-slick": "^0.30.3",
-    "sass": "^1.89.0"
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2",
+    "sass": "^1.89.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.15.23",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-slick": "^0.23.13",
@@ -26,8 +43,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "tw-animate-css": "^1.3.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.3.5"
   }
 }
