--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-redux": "^7.1.34",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dropdown-menu": "^0.1.1",
+    "jest": "^29.7.0",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.511.0",
     "pure-react-carousel": "^1.32.0",
     "react": "^18.3.1",
