feat: add inifine loader

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "node server.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "server": "json-server --watch db.json --port 3000",
     "preview": "vite preview"
   },
   "dependencies": {
