--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "server": "json-server --watch db.json --port 3000",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -17,44 +19,40 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
-    "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.9.0",
+    "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dropdown-menu": "^0.1.1",
-    "jest": "^29.7.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.511.0",
-    "pure-react-carousel": "^1.32.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
-    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-slick": "^0.30.3",
     "redux": "^5.0.1",
-    "redux-toolkit": "^1.1.2",
     "sass": "^1.89.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
     "zod": "^3.25.36"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.23",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "tw-animate-css": "^1.3.0",
+    "jest": "^29.7.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.3.5"
